--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div id='main-band'>
   <header>
     <h1>
-      <img src=/img/logo.png />
+      <img src=/site_a/img/logo.png />
       УнтерФюрра
     </h1>
   </header>
 </div>
 <div id='idea-band'>
-  <pre class='content'>Запчасти для дережаблей,
+  <pre class='content'>Запчасти для дерижаблей,
   поездов и паровых машин
   с доставкой.</pre>
 </div>
@@ -57,7 +57,7 @@
 <div class='cards'>
   <div class='card'>
     <div class='card-image'>
-      <img src='/img/bus.png'>
+      <img src='/site_a/img/bus.png'>
     </div>
     <div class='card-header'>
       Для автобусов
@@ -68,7 +68,7 @@
   </div>
   <div class='card'>
     <div class='card-image'>
-      <img src='/img/truck.png'>
+      <img src='/site_a/img/truck.png'>
     </div>
     <div class='card-header'>
       Для грузовиков
@@ -79,7 +79,7 @@
   </div>
   <div class='card'>
     <div class='card-image'>
-      <img src='/img/semitrailer.png'>
+      <img src='/site_a/img/semitrailer.png'>
     </div>
     <div class='card-header'>
       Для прицепов
